# gpt_export_distillation

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  gpt_export_distillation.toml  pyproject.toml
benchmarks/: README.md  benchmark_bge_m3_mlx.py  benchmark_bge_m3_torch.py
docs/: architecture-workflows.md  architecture.md  canonical-generation-migration.md  canonical-ingestion-validation.md  canonical-semantic-ingestion.md  chunked-retrieval-index.md  configuration.md  database-schema.md  export-format-spec.md  first-run.md  incremental-foundation.md  kb-workflow-architecture.md  mcp-integration.md  mcp-memory-contract.md  product-radar.md  ptha-doctor.md  ptha-embedding-pipeline.md  ptha-recovery.md  ptha-reindex.md  ptha-service.md  ptha-v1-implementation-assessment.md  real-data-preflight-manifest.example.json  real-data-preflight-probes.example.json  upstream_sparse_encoder_memory_issue.md
scripts/: convert_bge_m3_to_mlx_fp16.py  validate_canonical_generation.py
src/gpt_export_distillation/: __init__.py  cli.py  config.py  loader.py  models.py  nlp.py  pipeline.py
src/kb/: benchmark.py  block_chunk_audit.py  cli.py  fusion_eval.py  storage_audit.py
src/kb/canary/: __init__.py  multilingual_dense.py  real_data.py
src/kb/embeddings/: base.py  bge_m3_provider.py  dense_provider.py  mock_provider.py  sentence_transformer_provider.py  sparse_provider.py
src/kb/index/: chunk_builder.py  edge_builder.py  semantic_node_builder.py
src/kb/ingest/: attachment_parser.py  canonical_markdown.py  chat_md_parser.py  tree_walker.py
src/kb/mcp/: archive.py  result_assembly.py  server.py  tools.py
src/kb/model/: entities.py  ids.py
src/kb/retrieval/: context_pack.py  hybrid_search.py
src/kb/storage/: dense_native.py  migrations.py  native_pre_mvp.py  sparse_backend_spike.py  sqlite_schema.sql  sqlite_store.py
src/ptha/: __init__.py  cli.py  config.py  database.py  doctor.py  embedding_benchmark.py  embedding_diagnostics.py  errors.py  importer.py  incremental.py  ipc.py  lifecycle.py  mcp.py  operations.py  paths.py  process.py  reindex.py  service.py
tests/: ptha_fake_service.py  test_canonical_ingestion.py  test_compact_retrieval_results.py  test_incremental_foundation.py  test_kb_milestone1.py  test_library_files.py  test_mcp_archive.py  test_mlx_bge_m3_provider.py  test_ptha_lifecycle.py  test_ptha_operational.py  test_ptha_runtime.py  test_ptha_shell.py  test_resumable_index_batches.py
tools/: native_message_benchmark.py  native_runtime_audit.py
