[project]
name = "gpt-export-distillation"
version = "0.2.6"
description = "Distill ChatGPT exports into Markdown-only reviewable folders"
readme = "README.md"
authors = [
    { name = "anfedoro", email = "anfedoro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers>=5.0.0",
]

[project.optional-dependencies]
nlp = [
    "pymorphy3>=2.0.4",
]

[project.scripts]
gpt-export-distillation = "gpt_export_distillation:main"
kb-index = "kb.cli:main"
kb-search = "kb.retrieval.hybrid_search:main"
kb-mcp = "kb.mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["gpt_export_distillation", "kb"]
