[project]
name = "gpt-export-distillation"
version = "0.2.15"
description = "Distill ChatGPT exports into Markdown-only reviewable folders"
readme = "README.md"
authors = [
    { name = "anfedoro", email = "anfedoro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.0.0",
    "mlx>=0.31.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-embeddings @ git+https://github.com/anfedoro/mlx-embeddings.git@4a8277aa523eb34ff29a5a832fa3f3f654336b54; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "platformdirs>=4.3.0",
    "psutil>=7.0.0",
    "sqlite-vec>=0.1.9",
    "transformers[sentencepiece]>=5.0.0,<5.13.0",
]

[project.optional-dependencies]
nlp = [
    "pymorphy3>=2.0.4",
]
legacy-torch = [
    "sentence-transformers>=5.0.0",
]
model-conversion = [
    "torch>=2.12.0",
    "safetensors>=0.6.0",
    "huggingface-hub>=1.0.0",
]

[project.scripts]
ptha = "ptha.cli:main"
gpt-export-distillation = "gpt_export_distillation:main"
kb-index = "kb.cli:main"
kb-search = "kb.retrieval.hybrid_search:main"
kb-mcp = "kb.mcp.server:main"
kb-benchmark = "kb.benchmark:main"
kb-model-canary = "kb.canary.multilingual_dense:main"
kb-real-data-preflight = "kb.canary.real_data:main"
kb-retrieval-fusion-eval = "kb.fusion_eval:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["gpt_export_distillation", "kb", "ptha"]
