[project]
name = "ptha"
version = "0.4.3"
description = "PTHA — Personal Thought Archive: local ChatGPT archive search and MCP server"
readme = "README.md"
authors = [
    { name = "anfedoro", email = "anfedoro@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "blake3>=1.0.0,<2",
    "huggingface-hub>=1.0.0",
    "mlx>=0.31.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-embeddings @ git+https://github.com/anfedoro/mlx-embeddings.git@4a8277aa523eb34ff29a5a832fa3f3f654336b54; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "platformdirs>=4.3.0",
    "psutil>=7.0.0",
    "sqlite-vec>=0.1.9",
    "tqdm>=4.67.0",
    "transformers[sentencepiece]>=5.0.0,<5.13.0",
]

[project.optional-dependencies]
nlp = [
    "pymorphy3>=2.0.4",
]
legacy-torch = [
    "sentence-transformers>=5.0.0",
]
model-conversion = [
    "torch>=2.12.0",
    "safetensors>=0.6.0",
    "huggingface-hub>=1.0.0",
]

[project.scripts]
ptha = "ptha.cli:main"

[project.urls]
Repository = "https://github.com/anfedoro/ptha"
Documentation = "https://github.com/anfedoro/ptha/tree/main/docs"
Issues = "https://github.com/anfedoro/ptha/issues"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["gpt_export_distillation", "kb", "ptha"]
